--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
-    <script defer src="static/js/font-awesome.js"></script>
-    <link rel="stylesheet" href="static/css/bulma.min.css">
+    <script defer src="/static/js/font-awesome.js"></script>
+    <link rel="stylesheet" href="/static/css/bulma.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
 </head>
