--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -3,7 +3,7 @@
     <script defer src="/static/js/font-awesome.js"></script>
     <link rel="stylesheet" href="/static/css/bulma.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
+    <title>{{ title }}</title>
 </head>
 <body>
     {% include "navbar.html" %}
