--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -2,6 +2,7 @@
 <head>
     <script defer src="/static/js/font-awesome.js"></script>
     <link rel="stylesheet" href="/static/css/bulma.min.css">
+    <script type="text/javascript" src="/static/vendor/jquery-3.4.1.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }}</title>
 </head>
@@ -9,4 +10,5 @@
     {% include "navbar.html" %}
     {% block body %}
     {% endblock %}
+    <script type="text/javascript" src="/static/js/main.js"></script>
 </body>
