--- a/src/templates/signup.html
+++ b/src/templates/signup.html
@@ -30,7 +30,7 @@
         </div>
         <div class="field is-grouped">
             <div class="control">
-                <button class="button is-link">Signin</button>
+                <button class="button is-link">Signup</button>
             </div>
         </div>
     </div>
