--- a/src/templates/signin.html
+++ b/src/templates/signin.html
@@ -1,10 +1,12 @@
 {% extends "layout.html" %}
 {% block body %}
     <div class="container">
+        <div id="login-notification" class="notification is-danger is-hidden">
+        </div>
         <div class="field">
             <label class="label">Email</label>
             <div class="control has-icons-left">
-                <input class="input" type="text" placeholder="Email">
+                <input class="input" id="email-signin" type="text" placeholder="Email">
                 <span class="icon is-small is-left">
                     <i class="fas fa-envelope"></i>
                 </span>
@@ -13,7 +15,7 @@
         <div class="field">
             <label class="label">Password</label>
             <div class="control has-icons-left">
-                <input class="input" type="password" placeholder="Password">
+                <input class="input" id="password-signin" type="password" placeholder="Password">
                 <span class="icon is-small is-left">
                     <i class="fas fa-key"></i>
                 </span>
@@ -21,8 +23,36 @@
         </div>
         <div class="field is-grouped">
             <div class="control">
-                <button class="button is-link">Signup</button>
+                <button class="button is-link" id="button-signin">Signin</button>
             </div>
         </div>
+
+        <script type="text/javascript">
+            function objectToURLEncode(string) {
+                return Object.entries(string).map(([k, v]) => `${encodeURIComponent(k)}=${encodeURIComponent(v)}`).join('&');
+            }
+
+            document.querySelector("#button-signin").addEventListener("click", () => {
+                fetch("/api/signin", {
+                    method: "POST",
+                    headers: {
+                      'Content-Type': 'application/x-www-form-urlencoded'
+                    },
+                    body: objectToURLEncode({
+                        email: document.querySelector("#email-signin").value,
+                        password: document.querySelector("#password-signin").value,
+                    }),
+                })
+                .then((data) => data.json())
+                .then((decoded_data) => {
+                    if (decoded_data.success === true) {
+                        window.location.replace("/");
+                    } else {
+                        document.querySelector("#login-notification").classList.remove("is-hidden");
+                        document.querySelector("#login-notification").innerText = "Wrong email or password";
+                    }
+                })
+            });
+        </script>
     </div>
 {% endblock %}
