--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -2,35 +2,35 @@
 {% block body %}
     <container>
         <div class="columns">
-            {% for product in product_list %}
+            {% for product, product_thumbnail in product_list_and_media %}
                 <div class="column is-4">
                     <div class="card">
                       <div class="card-image">
                         <a href="/@{{ product.shop_id }}/{{ product.id }}">
                             <figure class="image is-4by3">
-                              <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                              <img src="{{ product_thumbnail }}" alt="Placeholder image">
                             </figure>
                         </a>
                       </div>
                       <div class="card-content">
                         <a href="/@{{ product.shop_id }}/{{ product.id }}">
-                            <div class="media">
-                              <div class="media-left">
-                                <figure class="image is-48x48">
-                                  <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-                                </figure>
-                              </div>
-                              <div class="media-content">
-                                <p class="title is-4">{{ product.name }}</p>
-                                <p class="subtitle is-6">Rp. {{ product.price }}</p>
-                              </div>
-                            </div>
+                        <div class="media">
+                          <div class="media-left">
+                            <figure class="image is-48x48">
+                              <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+                            </figure>
+                          </div>
+                          <div class="media-content">
+                            <p class="title is-4">{{ product.name }}</p>
+                            <p class="subtitle is-6">Rp. {{ product.price }}</p>
+                          </div>
+                        </div>
 
-                            <div class="content">
-                              <p>
-                                  <time datetime="2016-1-1">{{ product.created_at }}</time>
-                              </p>
-                            </div>
+                        <div class="content">
+                          <p>
+                              <time datetime="2016-1-1">{{ product.created_at }}</time>
+                          </p>
+                        </div>
                         </a>
                       </div>
                     </div>
