navbar margin and styling

--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -5,6 +5,11 @@
     <script type="text/javascript" src="/static/vendor/jquery-3.4.1.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }}</title>
+    <style>
+        nav{
+            padding:10px 0px;
+        }
+    </style>
 </head>
 <body>
     {% include "navbar.html" %}
