--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav style="border-bottom:2px solid #c05418" class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
         <img src="/static/img/logo.png" width="112" height="28">
@@ -16,15 +16,20 @@
         <a class="navbar-item" href="/">
           Home
         </a>
-  
-        <div class="navbar-item field">
-          <p class="control has-icons-right">
-            <input class="input" type="search" placeholder="Search...">
-            <span class="icon is-small is-right">
-              <icon />
-            </span>
-          </p>
+
         </div>
+        <div class="navbar-item field has-addons">
+          <p style="width:100%;" class="control has-icons-right">
+            <input class="input" type="search" placeholder="Search...">
+          </p>
+          <p class="control">
+
+          <button type="submit" class="button is-primary">
+             <span class="icon is-small is-right">
+               <i class="fas fa-search"></i>
+             </span>
+           </button>
+          </p>
   
 <!--        <div class="navbar-item has-dropdown is-hoverable">-->
 <!--          <a class="navbar-link">-->
