--- a/src/templates/signup.html
+++ b/src/templates/signup.html
@@ -4,7 +4,7 @@
         <div class="field">
             <label class="label">Name</label>
             <div class="control has-icons-left">
-                <input class="input" type="text" placeholder="Name">
+                <input class="input" type="text" id="name-signup" placeholder="Name">
                 <span class="icon is-small is-left">
                     <i class="fas fa-user"></i>
                 </span>
@@ -13,7 +13,7 @@
         <div class="field">
             <label class="label">Email</label>
             <div class="control has-icons-left">
-                <input class="input" type="text" placeholder="Email">
+                <input class="input" type="text" id="email-signup" placeholder="Email">
                 <span class="icon is-small is-left">
                     <i class="fas fa-envelope"></i>
                 </span>
@@ -22,7 +22,7 @@
         <div class="field">
             <label class="label">Password</label>
             <div class="control has-icons-left">
-                <input class="input" type="password" placeholder="Password">
+                <input class="input" type="password" id="password-signup" placeholder="Password">
                 <span class="icon is-small is-left">
                     <i class="fas fa-key"></i>
                 </span>
@@ -30,8 +30,35 @@
         </div>
         <div class="field is-grouped">
             <div class="control">
-                <button class="button is-link">Signup</button>
+                <button class="button is-link" id="button-signup">Signup</button>
             </div>
         </div>
+        <script type="text/javascript">
+            function objectToURLEncode(string) {
+                return Object.entries(string).map(([k, v]) => `${encodeURIComponent(k)}=${encodeURIComponent(v)}`).join('&');
+            }
+
+            document.querySelector("#button-signup").addEventListener("click", () => {
+                fetch("/api/signup", {
+                    method: "POST",
+                    headers: {
+                      'Content-Type': 'application/x-www-form-urlencoded'
+                    },
+                    body: objectToURLEncode({
+                        name: document.querySelector("#name-signup").value,
+                        email: document.querySelector("#email-signup").value,
+                        password: document.querySelector("#password-signup").value,
+                    }),
+                })
+                .then((data) => data.json())
+                .then((decoded_data) => {
+                    if (decoded_data.success === true) {
+                        window.location.replace("/signin");
+                    } else {
+                        alert("Error occured")
+                    }
+                })
+            });
+        </script>
     </div>
 {% endblock %}
