Writing a lot of feature and I forget what I write

--- a/src/templates/addproduct.html
+++ b/src/templates/addproduct.html
@@ -6,19 +6,19 @@
             <div class="field">
                 <label class="label">Name</label>
                 <div class="control">
-                    <input class="input" type="text" placeholder="Text input">
+                    <input class="input" type="text" placeholder="Name">
                 </div>
             </div>
             <div class="field">
-                <label class="label">Harga</label>
+                <label class="label">Price</label>
                 <div class="control">
-                    <input class="input" type="text" placeholder="Text input">
+                    <input class="input" type="text" placeholder="Price">
                 </div>
             </div>
             <div class="field">
-                <label class="label">Detail</label>
+                <label class="label">Description</label>
                 <div class="control">
-                    <textarea class="textarea" placeholder="Textarea"></textarea>
+                    <textarea class="textarea" placeholder="Description"></textarea>
                 </div>
             </div>
             <div class="field">
