--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
     <container>
-        <div class="columns">
+        <div class="columns is-multiline">
             {% for product, product_thumbnail in product_list_and_media %}
                 <div class="column is-4">
                     <div class="card">
