--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -79,7 +79,6 @@
               </div>
               <div class="dropdown-menu" role="menu">
                 <div class="dropdown-content" id="trolley-list">
-                  <a href="#" class="dropdown-item">A</a>
                 </div>
               </div>
             </div>
@@ -93,7 +92,7 @@
               <strong>Sign up</strong>
             </a>
             <a class="button is-light" href="/signin">
-              Log in
+              <strong>Sign in</strong>
             </a>
           {% else %}
             <div class="dropdown" id="dropdown-user">
@@ -110,7 +109,7 @@
                   <a href="#" class="dropdown-item">
                     Settings
                   </a>
-                  <hr class="dropdown-divider">
+                  <hr class="dropdown-divider" />
                   <a href="/logout" class="dropdown-item">
                     Logout
                   </a>
