--- a/src/templates/product.html
+++ b/src/templates/product.html
@@ -1,41 +1,66 @@
 {% extends "layout.html" %}
 {% block body %}
-    <container>
+<container>
+    <!-- Vendor  -->
+    <script src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js" type="module"></script>
+    <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
+    <link href="/static/vendor/slick/slick.css" rel="stylesheet" type="text/css"/>
+    <link href="/static/vendor/slick/slick-theme.css" rel="stylesheet" type="text/css"/>
+    <script src="/static/vendor/slick/slick.min.js" type="text/javascript"></script>
+    <script>
+        const product_id = "{{ product.id }}";
+    </script>
 
-        <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
-        <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
-        <!-- Use it like any other HTML element -->
-
-        <link rel="stylesheet" type="text/css" href="/static/vendor/slick/slick.css"/>
-        <link rel="stylesheet" type="text/css" href="/static/vendor/slick/slick-theme.css"/>
-        <script type="text/javascript" src="/static/vendor/slick/slick.min.js"></script>
-
-        <div class="columns">
-            <div class="column is-half" style="padding: 50px;">
-                <nav class="panel">
-                  <p class="panel-tabs">
-                      {% if media_3d != [] %}
-                    <a class="is-active" id="media-3d">3D Object</a>
-                      {% endif %}
-                      {% if media_images != [] %}
-                    <a id="media-images">Images</a>
-                      {% endif %}
-                  </p>
-                    <div id="view-media-3d" style="width:100%; height: auto;">
-                        {% for model in media_3d %}
-                            <model-viewer src="/dynamic/{{ model.type }}/{{ model.url }}" auto-rotate camera-controls background-color="#455A64"></model-viewer>
+    <div class="columns">
+        <div class="column is-half" style="padding: 50px;">
+            {% if is_mine %}
+            <button class="button is-primary" id="button-settings">Product Settings</button>
+            <div class="modal" id="modal-settings">
+                <div class="modal-background"></div>
+                <div class="modal-card">
+                    <header class="modal-card-head">
+                        <p class="modal-card-title">Settings</p>
+                        <button aria-label="close" class="delete"></button>
+                    </header>
+                    <section class="modal-card-body">
+                        {% include "managemedia.html" %}
+                    </section>
+                    <footer class="modal-card-foot">
+                    </footer>
+                </div>
+            </div>
+            {% endif %}
+            <nav class="panel">
+                <p class="panel-tabs">
+                    {% if media_3d|length > 0 %}
+                        <a class="is-active" id="nav-media-3d">3D Object</a>
+                    {% endif %}
+                    {% if media_images|length > 0 %}
+                        <a id="nav-media-images" {% if media_3d|length == 0 %}class="is-active"{% endif %}>Images</a>
+                    {% endif %}
+                </p>
+                <div id="nav-container-media-3d" style="width:100%; height: auto;">
+                    {% for model in media_3d %}
+                    <model-viewer auto-rotate background-color="#455A64" camera-controls
+                                  src="/dynamic/{{ model.type }}/{{ model.url }}"></model-viewer>
+                    <a class="button is-default"
+                       href="intent://localhost:5000/dynamic/{{ model.type }}/{{ model.url }}#Intent;scheme=https;package=com.google.ar.core;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;S.mode=ar_only;end;">AR
+                        View</a>
+                    {% endfor %}
+                </div>
+                <div class="is-hidden" id="nav-container-media-images" {% if media_3d|length > 0 %}
+                    class="is-invisible"
+                    {% endif %}
+                    style="width:100%; height: auto;">
+                    <div class="preview-carousel">
+                        {% for image in media_images %}
+                        <div>
+                            <img class="media-img" src="/dynamic/{{ image.type }}/{{ image.url }}"/>
+                        </div>
                         {% endfor %}
                     </div>
-                    <div id="view-media-images" class="is-invisible" style="width:100%; height: auto;">
-                        <div class="preview-carousel">
-                            {% for image in media_images %}
-                            <div>
-                                <img src="/dynamic/{{ image.type }}/{{ image.url }}" class="media-img" />
-                            </div>
-                            {% endfor %}
-                        </div>
-                    </div>
-                    <style>
+                </div>
+                <style>
                         .preview-carousel {
                           height: auto;
                           width: 80%;
@@ -62,40 +87,71 @@
                           height: 0px;
                           max-height: 0px;
                         }
-                    </style>
-                </nav>
-            </div>
-            <div class="column">
-                <h2 class="is-size-2">{{ product.name }}</h2>
-                <p>Oleh <b>{{ shop.name }}</b></p>
-                <p>{{ product.description }}</p>
 
-                <div class="is-pulled-left">
-                    <div class="field has-addons has-addons-centered">
-                      <p class="control">
+
+
+                </style>
+            </nav>
+        </div>
+        <div class="column">
+            <h2 class="is-size-2">{{ product.name }}</h2>
+            <p>Oleh <b><a href="/@{{ shop.id }}">{{ shop.name }}</a></b></p>
+            <h3 class="is-size-3">Rp. {{ "{0:,}".format(product.price|int) }},-</h3>
+
+            {% autoescape false %}
+                <p style="margin-top: 20px; margin-bottom:20px;">{{ (product.description).replace('\n', '<br>') }}</p>
+            {% endautoescape %}
+
+            {% if not is_mine %}
+            <div class="is-pulled-left">
+                <div class="field has-addons has-addons-centered">
+                    <p class="control">
                         <button class="button is-primary" id="reduce-quantity">
-                          -
+                            -
                         </button>
-                      </p>
-                      <p class="control">
-                        <input class="input" type="number" id="quantity-field" value="0" placeholder="Quantity">
-                      </p>
-                      <p class="control">
+                    </p>
+                    <p class="control">
+                        <input class="input" id="quantity-field" placeholder="Quantity" type="number" value="0">
+                    </p>
+                    <p class="control">
                         <button class="button is-primary" id="add-quantity">
-                          +
+                            +
                         </button>
-                      </p>
-                      <p class="control">
+                    </p>
+                    <p class="control">
                         <button class="button is-danger" id="add-to-cart">Add to Cart</button>
-                      </p>
-                    </div>
+                    </p>
                 </div>
             </div>
+            {% endif %}
         </div>
+    </div>
 
-        <script type="text/javascript">
-            var product_id = "{{ product.id }}";
-            var user_email = "{{ current_user.email }}";
+    <script type="text/javascript">
+        {% if media_3d|length > 0 and media_images|length > 0 %}
+            const navMediaImages = document.querySelector("#nav-media-images");
+            const navMedia3D = document.querySelector("#nav-media-3d");
+            const navContainerMediaImages = document.querySelector("#nav-container-media-images");
+            const navContainerMedia3D = document.querySelector("#nav-container-media-3d");
+
+            navMediaImages.addEventListener("click", () => {
+                navMediaImages.classList.add("is-active");
+                navMedia3D.classList.remove("is-active");
+
+                navContainerMediaImages.classList.remove("is-hidden");
+                navContainerMedia3D.classList.add("is-hidden");
+            });
+
+            navMedia3D.addEventListener("click", () => {
+                navMediaImages.classList.remove("is-active");
+                navMedia3D.classList.add("is-active");
+
+                navContainerMediaImages.classList.add("is-hidden");
+                navContainerMedia3D.classList.remove("is-hidden");
+            });
+        {% endif %}
+
+        {% if not is_mine %}
             const quantityField = document.querySelector("#quantity-field");
 
             document.querySelector("#add-quantity").addEventListener("click", () => {
@@ -125,23 +181,41 @@
                 .then((data) => data.json())
                 .then((decoded_data) => {
                     if (decoded_data.success === true) {
-                        alert("Ok");
+                        alert("Added");
+                        quantityField.value = 0;
                     } else {
-                        alert("Bruh");
+                        alert("Error happened");
                     }
-                })
+                    refreshTrolley();
+                });
             });
+        {% else %}
+            // Modal
+            const html = document.querySelector("html");
+            const settingsModal = document.querySelector("#modal-settings.modal");
+            const settingsButton = document.querySelector("#button-settings");
 
-            $(".preview-carousel").slick({
-                infinite: true,
-                dots: true,
-                slidesToShow: 1,
-                slidesToScroll: 1,
-                draggable: false,
-                swipe: false,
+            settingsButton.addEventListener("click", () => {
+                settingsModal.classList.add("is-active");
+                html.classList.add("is-clipped");
+                settingsModal.querySelector('.modal-background').addEventListener('click', function(e) {
+                    e.preventDefault();
+                    settingsModal.classList.remove("is-active");
+                    html.classList.remove("is-clipped");
+                });
             });
-        </script>
-        <style>
+        {% endif %}
+
+        $(".preview-carousel").slick({
+            infinite: true,
+            dots: true,
+            slidesToShow: 1,
+            slidesToScroll: 1,
+            draggable: false,
+            swipe: false,
+        });
+    </script>
+    <style>
         .slick-prev:before {
           font-size: 20px;
           line-height: 20px;
@@ -157,15 +231,9 @@
           line-height: 20px;
           color: #00d1b2;
         }
-        </style>
 
-<!--        <div class="columns">-->
-<!--            <div class="column is-half">-->
-<!--                Edit Media-->
-<!--            </div>-->
-<!--            <div class="column">-->
 
-<!--            </div>-->
-<!--        </div>-->
-    </container>
+
+    </style>
+</container>
 {% endblock %}
