--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -2,7 +2,7 @@
 {% block body %}
     <container>
         <div class="columns is-multiline">
-            {% for product, product_thumbnail in product_list_and_media %}
+            {% for product, shop, product_thumbnail in product_list_and_media %}
                 <div class="column is-4">
                     <div class="card">
                       <div class="card-image">
@@ -22,14 +22,12 @@
                           </div>
                           <div class="media-content">
                             <p class="title is-4">{{ product.name }}</p>
-                            <p class="subtitle is-6">Rp. {{ product.price }}</p>
+                              <p class="subtitle is-6">Oleh <a href="/@{{ shop.id }}">{{ shop.name }}</a></p>
                           </div>
                         </div>
 
                         <div class="content">
-                          <p>
-                              <time datetime="2016-1-1">{{ product.created_at }}</time>
-                          </p>
+                            <h4 class="is-size-43">Rp. {{ product.price }}</h4>
                         </div>
                         </a>
                       </div>
