--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <head>
-    <script defer src="/static/js/font-awesome.js"></script>
-    <link rel="stylesheet" href="/static/css/bulma.min.css">
     <script type="text/javascript" src="/static/vendor/jquery-3.4.1.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/c543194844.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/bulma.min.css">
     <title>{{ title }}</title>
     <style>
         nav{
             padding:10px 0px;
         }
+
+
     </style>
-    {% if current_user %}
-        <script type="text/javascript" src="/profile.js"></script>
+    {% if current_user.is_authenticated %}
+    <script type="text/javascript">
+            const user_email = "{{ current_user.email }}";
+            {% if current_user.shop %}
+                const shop_id = "{{ current_user.shop.id }}";
+            {% endif %}
+
+
+    </script>
     {% endif %}
 </head>
 <body>
@@ -20,8 +30,52 @@
         {% block body %}
         {% endblock %}
     </main>
+    <footer class="footer" style="border-top:2px solid #c05418; margin-top: 20px;">
+        <div class="content has-text-centered">
+            <div class="columns">
+                <div class="column is-one-third">
+                    <img src="/static/img/logo.png"/>
+                    <p>
+                        © 2019 Hak Cipta Terpelihara PT Salaq E-commerce.
+                    </p>
+                    <p>
+                       Made with ❤ by Cikadev
+                    </p>
+                </div>
+                <div class="column is-one-third">
+                </div>
+                <div class="column is-one-third">
+                    <div class="columns is-multiline">
+                        <div class="column is-full">
+                            <div class="circle-icon social">
+                                <i class="fab fa-facebook-f fa-inverse"></i>
+                            </div>
+                            <div class="circle-icon social">
+                                <i class="fab fa-twitter fa-inverse"></i>
+                            </div>
+                            <div class="circle-icon social">
+                                <i class="fab fa-instagram fa-inverse"></i>
+                            </div>
+                            <div class="circle-icon social">
+                                <i class="fab fa-linkedin fa-inverse"></i>
+                            </div>
+                        </div>
+                        <a href="#" class="column is-half">
+                            <img src="/static/img/google_play.png" />
+                        </a>
+                        <a href="#" class="column is-half">
+                            <img src="/static/img/app_store.png" />
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script type="text/javascript" src="/static/js/main.js"></script>
+    {% if current_user.is_authenticated %}
+        <script type="text/javascript" src="/static/js/user-env.js"></script>
+    {% endif %}
     <script>
-        refreshTrolley();
+       refreshTrolley();
     </script>
 </body>
